[package]
name = "kyber-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
ignore = "0.4.18"
log = "0.4.16"
maplit = "1.0.2"
simple_logger = "2.1.0"
structopt = "0.3.26"
sublime_fuzzy = "0.7.0"
